--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <!--  bootstrap-->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
       <!-- to make markers work -->
-      <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' /> 
+      <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <!-- bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
@@ -25,11 +25,22 @@
     <script src="js/bootstrap-datepicker.js"></script>
     <script>
       $(function() {
-        $('#myModal').on('shown.bs.modal', function () {
-		var options = { day: 'numeric', month: 'long', year: 'numeric', hour:'numeric',  minute:'numeric' };
+        $('#myModal').on('show.bs.modal', function (event) {
+		var options = { day: 'numeric', month: 'long', year: 'numeric', hour:'numeric',  minute:'numeric', second: 'numeric' };
 		var today  = new Date();
 		$('#timerDateInput').val(today.toLocaleDateString(navigator.language, options));
+    var btnClicked = event.relatedTarget;
+    if (btnClicked.value) {
+      $("#saveButton").text("Save Timer");
+      editPost(btnClicked.value);
+    }else{
+      $("#saveButton").text("Create Timer");
+    }
+
 	});
+  $('#myModal').on('hide.bs.modal', function (event) {
+    $("#addform")[0].reset();
+  });
         $('.input-group.date').datepicker({
             clearBtn: true,
             daysOfWeekDisabled: "0",
@@ -47,7 +58,7 @@
             <input id="mySearch" class="form-control mr-sm-2" onkeyup="getList1()" type="search" placeholder="Search for tags..." aria-label="Search for tags...">
           </div> -->
           <div id="addentrybutton">
-            <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Entry</button>&nbsp;&nbsp;
+            <button type="button" class="btn btn-info"  data-toggle="modal" data-target="#myModal">Add Entry</button>&nbsp;&nbsp;
           </div>
         </div>
         <div id = "div0" style="margin-top: 50px;"> </div>
@@ -56,13 +67,13 @@
         <br>
 <!--         <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light" >
         <div class="collapse navbar-collapse" id="navbarCollapse" >
-       
-      </div> 
+
+      </div>
   </nav>-->
 
         <!-- Trigger the modal with a button -->
-  
-    
+
+
     <div id="postcopy" class="shadow p-3 mb-5 bg-white rounded" style="display: none;">
     <div class="row">
       <div class="col-md-12 col-sm-12">
@@ -70,7 +81,7 @@
           <div class="col-md-12 col-sm-12">
               <div class="timertitle">Title: </div>
           </div>
-        </div> 
+        </div>
         <div class="row">
             <div class="col-md-12 col-sm-12" style="text-align: center;">
 	      <div class="timedirection inline"></div>
@@ -79,19 +90,18 @@
               <div class="minutes inline"></div>
               <div class="seconds inline"></div>
             </div>
-        </div> 
+        </div>
         <div class="row">
             <div class="col-md-10 col-sm-6">
                 <div class="timerdescription">Description: </div>
             </div>
-            <div class="col-md-2 col-sm-6">
-        	<button class="btn btn-danger deletebtn" class="deletebtn"><i class="fa fa-trash"></i></button>
-                <button type="button" class="btn btn-primary likebtn">
-                <i class="fa fa-thumbs-up"></i>
-              </button>
-              <div class="inline bloglikes"></div>
+            <div class="col-md-2 col-sm-6" style="float:right">
+                <!-- <button type="button" class="btn btn-primary likebtn"><i class="fa fa-thumbs-up"></i></button> -->
+              <button type="button" class="btn btn-info editbtn" data-toggle="modal" data-target="#myModal" ><i class="fa fa-edit"></i></button>
+              <button class="btn btn-danger deletebtn" class="deletebtn"><i class="fa fa-trash"></i></button>
+              <!-- <div class="inline bloglikes"></div> -->
             </div>
-          </div> 
+          </div>
       </div>
     </div>
     <div class="row">
@@ -112,10 +122,10 @@
     </div>
   </div>
   <!-- Footer -->
-<footer class="page-footer font-small blue">
+<footer class="footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-right py-3"><div style="margin-right: 10px; color: #ccc;"><img src="/images/pixelround.png" height="55px"></div>
+  <div class="footer-copyright text-right py-3"><div style="margin-right: 10px; color: #ccc;"><img src="images/pixelround.png" height="40"></div>
   </div>
   <!-- Copyright -->
 
@@ -156,28 +166,29 @@
           <div class="form-group">
             <label>Timer precision</label>
             <div class="form-group form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <input type="checkbox" class="form-check-input" id="Check1">
                 <label class="form-check-label" for="exampleCheck1">Days</label>
             </div>
             <div class="form-group form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <input type="checkbox" class="form-check-input" id="Check2">
                 <label class="form-check-label" for="exampleCheck1">Hours</label>
             </div>
             <div class="form-group form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                <input type="checkbox" class="form-check-input" id="Check3">
                 <label class="form-check-label" for="exampleCheck1">Minutes</label>
             </div>
             <div class="form-group form-check form-check-inline">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Seconds</label>
+                <input type="checkbox" class="form-check-input" id="Check4">
+                <label class="form-check-label" for="exampleCheck1">Seconds</label
             </div>
         </div>
+        <input type = "hidden" id = "blogIndex" value=""/>
         </form>
           <br>
           <!--  submit button-->
                 </div>
         <div class="modal-footer">
-          <button onclick="addTimer();" type="button" class="btn btn-info">Create Timer</button>
+          <button onclick="addTimer();" type="button" class="btn btn-info" id = "saveButton">Create Timer</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
@@ -188,4 +199,3 @@
 
 </body>
 </html>
-
