Added error checking

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <textarea class="form-control" rows="3" cols = "10" id="timerDescription"></textarea>
           </div>
           <div class="form-group">
-              <label for="timerDateInput">Start date & time</label>
+              <label for="timerDateInput">Start date &amp; time</label>
               <div class="input-group date">
                   <input type="text" placeholder="" id="timerDateInput" class="form-control">
                   <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
